--- a/GitHubClient/app/src/main/res/layout/auth_fragment.xml
+++ b/GitHubClient/app/src/main/res/layout/auth_fragment.xml
@@ -27,4 +27,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/message" />
 
+    <Button
+        android:id="@+id/buttonSignInGoogle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Войти через гугл"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonEntry" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
